feat(1402): fix export column mapping and test cases